# vtk-web-solutions

./: .gitignore  README.md
client-server/: README.md  trame-client-server.py  trame-server.py
client-server/cxx-engine/: CMakeLists.txt  Cone.cxx  Cone.h  PyWrap.cxx  README.md
client-server/react-client/src/: App.jsx  VtkRemoteView.jsx  main.jsx
client-server/react-client/src/wslink/protocols/: index.js
client-server/vue-client/: index.html  package-lock.json  package.json
client-server/vue-client/src/: App.vue  main.js
simple-server/: README.md  trame-server.py
simple-server/react-client/: index.html  package-lock.json  package.json
simple-server/react-client/src/: App.jsx
simple-server/react-client/src/wslink/: index.js
simple-server/react-client/src/wslink/protocols/: Trame.js
